--- a/index.html
+++ b/index.html
@@ -3,51 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PiMemo - the way to know the digits</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <center>
-    <b><h1 class="large">Memorize π</h1>
-    <div id="sl">
-        <h5 id="lives">lives: 3</h5>
-        <h5 id="score">score: 0</h5>
-    </div>
-    <div id="output">
-
-    </div>
-    <div id="numberPad">
-        <div class="row">
-            <button onclick="func('1')">1</button>
-            <button onclick="func('2')">2</button>
-            <button onclick="func('3')">3</button>
-        </div>
-        <div class="row">
-            <button onclick="func('4')">4</button>
-            <button onclick="func('5')">5</button>
-            <button onclick="func('6')">6</button>
-        </div>
-        <div class="row">
-            <button onclick="func('7')">7</button>
-            <button onclick="func('8')">8</button>
-            <button onclick="func('9')">9</button>
-        </div> 
-        <div class="row">
-            <div id="useless"></div>
-            <button id="marg" onclick="func('0')">0</button>
-            <button onclick="func('.')">.</button>
+    <h1 id="memo">π Memo</h1>
+    <div id="modes">
+        <h5 align="center">Select Mode:</h5>
+        <div style="display: inline;">
+            <a href="zen.html"><button class="gb">Zen Mode</button></a>
+            <a href="arcade.html"><button style="position: relative; bottom: 8.5px; margin-right: 10px;" class="gb"> Arcade Mode</button></a>
+            <a href="practice.html"><button style="position: relative; bottom: 8.5px; margin-right: 10px;" class="gb"> Practice Mode</button></a>
         </div>
     </div>
-    <div id="popup">
-      <center>
-      <h1>You Lose!</h1>
-      <h5 id="spore"></h5>
-      <button onclick="disapear()">Try Again</button>
-      </center>
-    </div>
-    <h1 id="time">Time: </h1>
     </center>
-    <script src="main.js"></script>
-    <script src="wth.js"></script>
 </body>
 </html>
