--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h5 align="center">Select Mode:</h5>
         <div style="display: inline;">
             <a href="zen.html"><button class="gb">Zen Mode</button></a>
-            <a href="arcade.html"><button style="position: relative; bottom: 8.5px; margin-right: 10px;" class="gb"> Arcade Mode</button></a>
+            <a href="arcade.html"><button style="position: relative; bottom: 8.5px; margin: 10px;" class="gb"> Arcade Mode</button></a>
             <a href="practice.html"><button style="position: relative; bottom: 8.5px; margin-right: 10px;" class="gb"> Practice Mode</button></a>
         </div>
     </div>
