--- a/practice.html
+++ b/practice.html
@@ -61,7 +61,7 @@
           <div style="display: block">
             <button onclick="back()"
               style="background-color: rgb(114, 114, 114); width: 100px; height: 50px; border-radius: 10px; border: 0px;"
-              class="relat">Back</button>
+              class="relat">Clear</button>
           </div>
         </div>
       </div>
