--- a/practice.html
+++ b/practice.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>practice mode</title>
   <link rel="stylesheet" href="style3.css">
 </head>
 
