--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PiMemo - the way to know the digits</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="google-adsense-account" content="ca-pub-7475105458249496">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7475105458249496"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <center>
