--- a/practice.html
+++ b/practice.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style3.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7475105458249496"
      crossorigin="anonymous"></script>
+  <meta name="google-adsense-account" content="ca-pub-7475105458249496">
 </head>
 
 <body>
