--- a/zen.html
+++ b/zen.html
@@ -99,6 +99,11 @@
   </center>
   <script src="main2.js"></script>
   <script src="wth.js"></script>
+  <script type="text/javascript">
+var infolinks_pid = 3415375;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
 </html>
