--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
         </div>
     </div>
     </center>
+    <script type="text/javascript">
+var infolinks_pid = 3415375;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
