--- a/practice.html
+++ b/practice.html
@@ -101,6 +101,11 @@
       <br>
   </center>
   <script src="main3.js"></script>
+  <script type="text/javascript">
+var infolinks_pid = 3415375;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
 </html>
