--- a/arcade.html
+++ b/arcade.html
@@ -11,6 +11,18 @@
 </head>
 
 <body id="wut">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2766173875920542"
+     crossorigin="anonymous"></script>
+<!-- Ads for pi -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2766173875920542"
+     data-ad-slot="5021794135"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <center>
     <b>
       <h1 class="large">π Memo</h1>
