--- a/arcade.html
+++ b/arcade.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="style.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2766173875920542"
      crossorigin="anonymous"></script>
+  <!-- AdForGames.com code begin -->
+<script>var afg={};afg.u=6426;afg.s=21;
+afg.centerWidth=1000; /*Please Fix it.*/
+afg.topPos=0;
+document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
+<!-- AdForGames.com code end -->
 </head>
 
 <body id="wut">
