--- a/arcade.html
+++ b/arcade.html
@@ -121,6 +121,10 @@
   <script type="text/javascript">
 var infolinks_pid = 3415375;
 var infolinks_wsid = 0;
+  <!-- AdForGames.com code begin -->
+<script>var afg={};afg.u=6426;afg.s=4;
+document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
+<!-- AdForGames.com code end -->
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
