--- a/arcade.html
+++ b/arcade.html
@@ -110,7 +110,7 @@
       </div>
       <h1 id="time">Time: </h1>
       <!-- AdForGames.com code begin -->
-<script>var afg={};afg.u=6426;afg.s=3;
+<script style="margin-right: 50%; margin-left:50%">var afg={};afg.u=6426;afg.s=3;
 document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
 <!-- AdForGames.com code end -->
   </center>
