--- a/arcade.html
+++ b/arcade.html
@@ -109,6 +109,7 @@
         </center>
       </div>
       <h1 id="time">Time: </h1>
+      <p>Why ads?</p>
       <!-- AdForGames.com code begin -->
 <script style="margin-right: 50%; margin-left:50%">var afg={};afg.u=6426;afg.s=3;
 document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
