--- a/zen.html
+++ b/zen.html
@@ -116,6 +116,11 @@ var infolinks_pid = 3415375;
 var infolinks_wsid = 0;
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+<p>Why ads?</p>
+      <!-- AdForGames.com code begin -->
+<script style="margin-right: 50%; margin-left:50%">var afg={};afg.u=6426;afg.s=3;
+document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
+<!-- AdForGames.com code end -->
 </body>
 
 </html>
