--- a/practice.html
+++ b/practice.html
@@ -113,9 +113,11 @@
       <br>
   </center>
   <script src="main3.js"></script>
-  <script type="text/javascript">
-var infolinks_pid = 3415375;
-var infolinks_wsid = 0;
+  <p>Why ads?</p>
+      <!-- AdForGames.com code begin -->
+<script style="margin-right: 50%; margin-left:50%">var afg={};afg.u=6426;afg.s=3;
+document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
+<!-- AdForGames.com code end -->
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
