--- a/zen.html
+++ b/zen.html
@@ -108,7 +108,7 @@
               screen</button></a>
         </center>
       </div>
-      <p>Why ads?</p>
+      <p>Ads help fund our game</p>
       <!-- AdForGames.com code begin -->
 <script style="margin-right: 50%; margin-left:50%">var afg={};afg.u=6426;afg.s=3;
 document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
