--- a/practice.html
+++ b/practice.html
@@ -111,13 +111,13 @@
         <h3 style="color: rgb(255, 247, 0);" id="skip">Skipped digits: 0</h3>
       </div>
       <br>
+      <p>Ads help fund our game</p>
       <!-- AdForGames.com code begin -->
 <script style="margin-right: 50%; margin-left:50%">var afg={};afg.u=6426;afg.s=3;
 document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
 <!-- AdForGames.com code end -->
   </center>
   <script src="main3.js"></script>
-  <p>Why ads?</p>
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
