--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="practice.html"><button style="position: relative; bottom: 8.5px; margin-right: 10px;" class="gb"> Practice Mode</button></a>
         </div>
     </div>
-    <p>Why ads?</p>
+    <p>Ads help fund our game</p>
       <!-- AdForGames.com code begin -->
 <script style="margin-right: 50%; margin-left:50%">var afg={};afg.u=6426;afg.s=3;
 document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</script>
