--- a/practice.html
+++ b/practice.html
@@ -9,6 +9,15 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2766173875920542"
      crossorigin="anonymous"></script>
   <meta name="google-adsense-account" content="ca-pub-7475105458249496">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99RK5C60HD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99RK5C60HD');
+</script>
 </head>
 
 <body>
