--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PiMemo - the way to know the digits</title>
+    <title>Memorizepi/pimemo - the way to know the digits</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2766173875920542"
      crossorigin="anonymous"></script>
