--- a/index.html
+++ b/index.html
@@ -40,5 +40,10 @@ var infolinks_pid = 3415375;
 var infolinks_wsid = 0;
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+<script type="text/javascript">
+var infolinks_pid = 3415375;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
