--- a/arcade.html
+++ b/arcade.html
@@ -130,11 +130,10 @@ document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</scri
   <h1 class="cd" id="a3">1</h1>
   <h1 class="cd" id="a4">GO</h1>
   </div>
-  <script src="main.js"></script>
-  <script src="wth.js"></script>
   <script type="text/javascript">
 var infolinks_pid = 3415375;
 var infolinks_wsid = 0;
+</script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
