--- a/arcade.html
+++ b/arcade.html
@@ -135,6 +135,7 @@ var infolinks_pid = 3415375;
 var infolinks_wsid = 0;
 </script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
