--- a/practice.html
+++ b/practice.html
@@ -128,6 +128,10 @@ document.write("<sc"+"ript src='//js.adforgames.com/cd.js'></sc"+"ript>");</scri
   </center>
   <script src="main3.js"></script>
 </script>
+<script type="text/javascript">
+var infolinks_pid = 3415375;
+var infolinks_wsid = 0;
+</script>
 <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
