--- a/practice.html
+++ b/practice.html
@@ -35,11 +35,10 @@
 </script>
   <center>
     <b>
-      <h1 class="large">π Memo</h1>
+      <h1 class="large">Memorize π</h1>
       <nav id="hornav">
-        <li><a href="index.html">home</a></li>
+        <li><a href="index.html">arcade mode</a></li>
         <li><a href="zen.html">zen mode</a></li>
-        <li><a href="arcade.html">arcade mode</a></li>
         <div class="wl"></div>
         <li><a href="practice.html">practice mode</a></li>
         <div class="wl"></div>
@@ -50,25 +49,18 @@
           <summary style="margin-bottom: 10px; font-size: 25px">modes</summary>
           <div id="superior">
             <a href="index.html">
-              <li href="index.html">home</li>
+              <li>arcade mode</li>
             </a>
           </div>
           <div class="bcool">
-
             <a href="zen.html">
               <li>zen mode</li>
-            </a>
-          </div>
-          <div class="bcool">
-
-            <a href="arcade.html">
-              <li>arcade mode</li>
             </a>
           </div>
           <div id="inferior">
 
             <a href="practice.html">
-              <li>Practice mode</li>
+              <li>practice mode</li>
             </a>
 
           </div>
